apps/goatlint/src/snapshots/_fixtures__cli__vue__debugger.vue@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/vue/debugger.vue
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/vue/debugger.vue:6:5]
 5 | <script>
 6 |     debugger
   :     ^^^^^^^^
 7 | </script>
   `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[fixtures/cli/vue/debugger.vue:11:5]
 10 |     let foo: T; // test ts syntax
 11 |     debugger;
    :     ^^^^^^^^^
 12 | </script>
    `----
  help: Remove the debugger statement

Found 2 warnings and 0 errors.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
