apps/goatlint/src/snapshots/_fixtures__cli__vue__empty.vue@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/vue/empty.vue
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
