apps/goatlint/src/snapshots/_fixtures__cli__vue__invalid.vue@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/vue/invalid.vue
working directory: 
----------

  x Missing initializer in const declaration
   ,-[fixtures/cli/vue/invalid.vue:3:7]
 2 | // This is a line of very very normal code comment, nothing special here.
 3 | const message
   :       ^^^^^^^
 4 | </script>
   `----
  help: Add an initializer (e.g. ` = undefined`) here

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
